<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fxft.cheyoufuwu.ui.userCenter.activity.ChangeLoginPSWActivity">

    <com.fxft.cheyoufuwu.common.view.CommonTopBar
        android:id="@+id/ctb_change_psw_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:left_custom_layout="@layout/common_top_left_back_button_black_layout"
        app:left_layout_enable="true"
        app:title_enable="true"
        app:title_text="@string/title_activity_change_login_psw"
        app:title_text_color="@color/black"
        app:title_text_size="@dimen/middle_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_gray_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/huge_text_size"
                android:textColor="@color/black"
                android:text="@string/current_psw"/>

            <EditText
                android:id="@+id/et_current_psw"
                android:layout_marginTop="@dimen/padding_10dp"
                android:layout_marginBottom="@dimen/padding_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/huge_text_size"
                android:padding="@dimen/padding_10dp"
                android:background="@drawable/change_nick_name_et_bg"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/huge_text_size"
                android:textColor="@color/black"
                android:text="@string/new_psw"/>

            <EditText
                android:id="@+id/et_new_psw"
                android:layout_marginTop="@dimen/padding_10dp"
                android:layout_marginBottom="@dimen/padding_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/huge_text_size"
                android:padding="@dimen/padding_10dp"
                android:background="@drawable/change_nick_name_et_bg"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/huge_text_size"
                android:textColor="@color/black"
                android:text="@string/new_psw_input_again"/>

            <EditText
                android:id="@+id/et_new_psw_input_again"
                android:layout_marginTop="@dimen/padding_10dp"
                android:layout_marginBottom="@dimen/padding_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/huge_text_size"
                android:padding="@dimen/padding_10dp"
                android:background="@drawable/change_nick_name_et_bg"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text"
                android:text="@string/psw_input_rule"/>

            <Button
                android:id="@id/bt_save_button"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/huge_text_size"
                android:textColor="@color/white"
                android:text="@string/save"
                android:background="@drawable/common_red_radius_button_bg"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
