<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.fxft.cheyoufuwu.ui.userCenter.activity.ChangeNickNameActivity">

    <com.fxft.cheyoufuwu.common.view.CommonTopBar
        android:id="@+id/ctb_change_nickname_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:left_layout_enable="true"
        app:left_custom_layout="@layout/common_top_left_back_button_black_layout"
        app:title_enable="true"
        app:title_text="@string/title_activity_change_nick_name"
        app:title_text_color="@color/black"
        app:title_text_size="@dimen/middle_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_nick_name"
            android:layout_marginTop="@dimen/padding_10dp"
            android:layout_marginBottom="@dimen/padding_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:padding="@dimen/padding_10dp"
            android:background="@drawable/change_nick_name_et_bg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/nick_name_input_rule"/>

        <Button
            android:id="@id/bt_save_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/huge_text_size"
            android:textColor="@color/white"
            android:text="@string/save"
            android:background="@drawable/common_red_radius_button_bg"/>

    </LinearLayout>

</LinearLayout>
