<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fxft.cheyoufuwu.ui.userCenter.activity.UserDetailActivity">

    <com.fxft.cheyoufuwu.common.view.CommonTopBar
        android:id="@+id/ctb_user_detail_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:left_custom_layout="@layout/common_top_left_back_button_black_layout"
        app:left_layout_enable="true"
        app:title_enable="true"
        app:title_text="@string/personal_info"
        app:title_text_color="@color/black"
        app:title_text_size="@dimen/middle_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VIP_level"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_vip_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="VIP1"
            android:textColor="@color/light_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:text="@string/grow_value"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_current_grow_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="@color/light_red" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_10dp">

        <LinearLayout
            android:id="@+id/ll_current_vip_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_10dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_current_vip_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_vip_icon_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/normal_user"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_current_level_grow_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10dp"
                android:text="100" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_next_vip_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/padding_10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_next_vip_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_vip_icon_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/vip_level_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_next_level_base_grow_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10dp"
                android:text="300" />

        </LinearLayout>

        <com.fxft.cheyoufuwu.common.view.LineProcessView
            android:id="@+id/lpv_grow_value_process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            android:layout_marginTop="@dimen/padding_10dp"
            android:layout_toLeftOf="@id/ll_next_vip_level"
            android:layout_toRightOf="@id/ll_current_vip_level"
            app:text_size="@dimen/middle_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/rl_change_nick_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />

        <ImageView
            android:id="@id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/padding_10dp"
            android:layout_toLeftOf="@id/iv_right_arrow" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/rl_change_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_psw"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />

        <ImageView
            android:id="@id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/arrow_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/padding_10dp"
            android:layout_toLeftOf="@id/iv_right_arrow"
            android:text="@string/change" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/rl_change_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />

        <ImageView
            android:id="@id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/padding_10dp"
            android:layout_toLeftOf="@id/iv_right_arrow" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/rl_change_pay_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_pwd"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />

        <ImageView
            android:id="@id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tv_pay_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/padding_10dp"
            android:layout_toLeftOf="@id/iv_right_arrow" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

</LinearLayout>
